section order collapse is correct and responsive

--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -272,10 +272,17 @@ section {
     flex-direction: row-reverse;
 }
 
-section .container {
-    margin: 20rem 0;
+section:nth-last-of-type(2) {
+    margin: 5rem auto 12rem auto;
+
+}
+
+section:nth-last-of-type(3) {
+    margin: 20rem auto 10rem auto;
     width: 100%;
 }
+
+
 
 .row {
     display: flex;
@@ -487,21 +494,18 @@ section .container {
     .heroGraphic {
         position: relative;
         display: inline;
-        /* visibility: hidden; */
-        /* object-position: 2rem 6rem; */
-        /* max-height: 20rem; */
-        /* background-color: red; */
         display: flex;
-        /* justify-content: center; */
         align-items: center;
+        min-width: min-content;
     }
 
     .homepageGraphicOne {
         position: relative;
         height: 28rem;
         width: 100%;
-        object-fit: contain;
-        object-position: -1rem 0rem;
+        min-width: none;
+        max-width: fit-content;
+        object-position: 2rem 0rem;
     }
 
     .col-title {
@@ -518,10 +522,17 @@ section .container {
         /* background-color: red; */
         position: relative;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     .rainbowGraphic {
+        display: block;
         position: relative;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid red;
+
 
     }
 
